# RZDBadminton_Bot

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app_state.py  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-watchdog.sh  run.sh
Doc/: .env.example  Attendance_Report.xlsx  Promt Bot.txt  requirements.txt  rules  sources.txt  vk_sources.txt  Бадминтон.xlsx  Бадминтон_шаблон.xlsx  Шаблон сообщения для модерации.txt
database/: __init__.py  models.py  repositories.py
deploy/: git_push.sh  rzdbadminton-bot.service  update_on_server.sh
docs/: Diary.md  Project.md  Tasktracker.md  audit_2026-02-25.md  audit_code_2026-03.md  changelog.md  qa.md  rules_nfbr_docx.md  servers.md  setup.md  Источники_квизы_история_тактика.md  Описание_проекта_для_презентации.md  План_обратная_связь.md  Расписание_сообщений.md  Сборка_и_перенос_на_сервер.md
handlers/: __init__.py  admin_helpers.py  commands.py  feedback.py  news.py  polls.py  quiz.py  top3.py  vk_moderation.py  youtube_moderation.py
mastering-app/: PIPELINE.md  README.md  index.html  package.json
middlewares/: __init__.py  error_handler.py
scripts/: migrate_quiz_records.py
services/: __init__.py  db_backup.py  excel_reporter.py  llm.py  news_parser.py  report.py  scheduler.py  vk_video_monitor.py  yandex_disk.py  youtube_monitor.py
tests/: test_constants.py  test_llm_generation.py  test_news_helpers.py  test_parse_year_month.py
ui/: __init__.py  design.py  keyboards.py
utils/: logger.py  (+5 more)
(+18 files in other folders)
